Fixed: top navbar overlapping the content

--- a/src/documents/assets/css/home.css.styl
+++ b/src/documents/assets/css/home.css.styl
@@ -2,16 +2,16 @@ rounded-border()
     -webkit-border-radius: arguments
     -moz-border-radius: arguments
     border-radius: arguments
-            
-@font-face 
+
+@font-face
     font-family: main-light
     src: url('/assets/fonts/maven-pro-light-200.otf')
 
-@font-face 
+@font-face
     font-family: main
     src: url('/assets/fonts/maven-pro-light-300.otf')
 
-@font-face 
+@font-face
     font-family: cool
     src: url('/assets/fonts/signika-regular.ttf')
 
@@ -86,7 +86,7 @@ h4
     -o-transition:background-color 0.3s ease-in
     transition:background-color 0.3s ease-in
     background: blue
-             
+
 p
     font-size: 20px
 
@@ -99,7 +99,7 @@ a:visited
     display: inline-block
     max-width: none
 
-header 
+header
     padding: 100px 60px 40px 100px
 
     font-size: 20px
@@ -121,7 +121,7 @@ header
     p
         font-weight: normal
 
-.social 
+.social
     padding-top: 0
     img
         margin: 0
@@ -184,7 +184,7 @@ header
         text-align: center
         font-size: 40px
 
-    ul 
+    ul
         padding: 20px
         padding-top: 10px
         margin-left: 0
@@ -201,11 +201,12 @@ header
 .navbar
     position: fixed
     height: 60px
+    top: 0
     width: 100%
     background: white
     z-index: 40
 
-    img 
+    img
         width: 50px
         margin: 10px
 
@@ -221,6 +222,8 @@ header
         color: black
         text-decoration: underline
 
+.wrapper
+    margin-top 60px
 
 .txt-white
     color: white
@@ -345,7 +348,7 @@ a:focus
 
     .code
         background: lightblue - 30%
-        
+
     a.txt-black
         color: black
 
